--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,7 +15,7 @@ on:
         description: "Upload Non Rooted APKs to Telegram"
         required: false
         type: boolean
-        default: false
+        default: true
       TELEGRAM_ROOT_UPLOAD:
         description: "Upload Magisk Module from nikhilbadyal/revanced-magisk-module to Telegram"
         required: false
@@ -25,17 +25,17 @@ on:
         description: "Scan apks with VirusTotal"
         required: false
         type: boolean
-        default: false
+        default: true
       CLEANUP:
         description: "Clear GitHub(Useful if Telegram upload is enabled)"
         required: false
         type: boolean
-        default: false
+        default: true
       COMMIT_CHANGELOG:
         description: "Update Changelog"
         type: boolean
         required: false
-        default: false
+        default: true
       DEBUG_ENABLED:
         type: boolean
         description: 'Run the build with tmate debugging enabled.'
