--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -71,12 +71,12 @@ on:
         description: "Clear GitHub(Useful if Telegram upload is enabled)"
         required: false
         type: boolean
-        default: true
+        default: false
       COMMIT_CHANGELOG:
         description: "Update Changelog"
         type: boolean
         required: false
-        default: true
+        default: false
       DEBUG_ENABLED:
         type: boolean
         description: 'Run the build with tmate debugging enabled.'
