--- a/.github/workflows/newapp-check.yml
+++ b/.github/workflows/newapp-check.yml
@@ -114,7 +114,7 @@ jobs:
 =======
       - name: Create Issue Action
         if: inputs.CREATE_ISSUE
-        uses: actions/checkout@v3
+ #       uses: actions/checkout@v3
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
