--- a/.github/workflows/newapp-check.yml
+++ b/.github/workflows/newapp-check.yml
@@ -49,9 +49,11 @@ jobs:
           path: status.md
           if-no-files-found: error
 
+      - name: checkout repo content
+        uses: actions/checkout@v3
+
       - name: Create Issue Action
-        if: inputs.CREATE_ISSUE
- #       uses: actions/checkout@v3
+        if: inputs.CREATE_ISSUE     
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
