--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PATCH_APPS=youtube,youtube_music,twitter,twitch,photos,strava,lightroom
+PATCH_APPS=youtube,youtube_music,twitter,twitch,photos,strava,lightroom,prime-video
